_sass/main.scss
@import "jekyll-theme-cayman.scss";

.card {
    background: #fff;
    box-shadow: rgba(0,0,0,0.2) 0px 2px 4px;
    border-radius: 12px;
    margin-bottom:14px;
    
    @include large {
      padding: 2.5rem 2.5rem;
    }

    @include medium {
      padding: 2rem 2.5rem;
    }

    @include small {
        padding: 1rem 2rem;
    }
    
    & > h1:not(.exempt),
    & > h2:not(.exempt),
    & > h3:not(.exempt),
    & > h4:not(.exempt),
    & > h5:not(.exempt),
    & > h6:not(.exempt)
    {
        display: none;
    }
}

.preserve-whitespace {
    white-space:pre-wrap;
}

.page-navbar {
  background-color:darken($header-bg-color-secondary, 10%);
  background-image: linear-gradient(120deg, darken($header-bg-color-secondary, 10%), darken($header-bg-color, 10%));
  
  & a {
    
    color:#fff;
    text-decoration:none;
    
    &.active {
        border-bottom: 2px solid lighten($header-bg-color, 10%);
    }
    
    
    @include large {
      padding: 1.5rem 1.5rem;
    }

    @include medium {
      padding: 1.25rem 1.25rem;
    }

    @include small {
      padding: 1rem 1rem;
    }
  }
  
  @include large {
    padding: 1.5rem 1.5rem;
  }

  @include medium {
    padding: 1.25rem 1.25rem;
  }

  @include small {
    padding: 1rem 1rem;
  }
}

.page-footer {
  background-color: darken($header-bg-color-secondary, 20%);
  background-image: linear-gradient(120deg, darken($header-bg-color-secondary, 20%), darken($header-bg-color, 20%));
  border-bottom: 2px solid lighten($header-bg-color, 10%);
  padding: 1.5rem 1.5rem;
  color:#fff;
      
  & a {
    color: lighten(#1e6bb8, 20%);
  }
	
  @include large {
    padding: 2rem 6rem;
    font-size: 1.1rem;
  }

  @include medium {
    padding: 2rem 4rem;
    font-size: 1.1rem;
  }

  @include small {
    padding: 2rem 1rem;
    font-size: 1rem;
  }
}

.page-footer-inner {
	max-width: 64rem;
	margin: auto;
	
	h1 {
		font-size: 1.375rem;
	}
	
	p {
		font-size: 0.875rem;
	}
}

